# warden

./: README.md  Tiltfile  justfile
docker/: Dockerfile
k8s/: crd.yaml  mock_app_cr.yaml  mock_app_deployment.yaml  operator.yaml  operator_deployment.yaml
mock_app/: Cargo.toml
mock_app/src/: main.rs
warden/: Cargo.toml
warden/src/: controller.rs  crdgen.rs  lib.rs  main.rs
warden/src/handlers/: mod.rs  router.rs
