[package]
name = "warden"
version = "0.1.0"
edition = "2021"
default-run = "operator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.86.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20.0", features = ["v1_28"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
axum = "0.6.20"
anyhow = "1.0.75"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.40"
serde_yaml = "0.9.27"
serde = { version = "1.0.190", features = ["serde_derive"] }
serde_json = "1.0.108"
schemars = "0.8.15"
futures = "0.3.29"
thiserror = "1.0.50"

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"

[[bin]]
name = "operator"
path = "src/main.rs"

[lib]
name = "operator"
path = "src/lib.rs"

